gzip: make the output more reproducible

Problem reported by Bernhard M. Wiedemann (Bug#32342).
* NEWS: Mention this.
* doc/gzip.texi (Overview, Invoking gzip): Document this.
* gzip.c (get_input_size_and_time): New function,
which implements the change.
(treat_stdin, treat_file): Use it.
* tests/reproducible: New test.
* tests/Makefile.am (TESTS): Add it.